need to fix overflow

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -3,7 +3,7 @@ $primary-color: #a7c957;
 .page {
   width: 100%;
   height: 100%;
-  overflow-y: auto;
+  overflow-y: scroll;
   position: absolute;
 }
 
